carry over tooltip
Carry over tooltip added in html file, temporarily adjusted html file to open on first visualisation page.

--- a/inst/html-templates/html-template.html
+++ b/inst/html-templates/html-template.html
@@ -113,7 +113,7 @@
         7wRaxebSvaUhZ4Dh+g1An7JWyDiHatIH/Wf/L8AASkW+r91od4wAAAAASUVORK5CYII=">
             <h3>STU Visualisation</h3>
             <ul id="sidebar_list">
-                <li><a href="#" class="navpage navpage_home active">
+                <li><a href="#" class="navpage navpage_home">
                     <span>Home</span>
                 </a></li>
                 <li><a href="#" class="navpage navpage_help">
