--- a/inst/html-templates/html-template.html
+++ b/inst/html-templates/html-template.html
@@ -657,6 +657,10 @@
                         <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                       </span>
                       &nbsp;
+                      <span title="Show/hide event intervals">
+                        <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                      </span>
+                      &nbsp;
                       <span title="Show/hide the legend">
                         <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                       </span>
@@ -782,6 +786,10 @@
                         <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                       </span>
                       &nbsp;
+                      <span title="Show/hide event intervals">
+                        <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                      </span>
+                      &nbsp;
                       <span title="Show/hide the legend">
                         <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                       </span>
@@ -900,6 +908,10 @@
                     &nbsp;
                     <span title="Show/hide the title">
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
+                    </span>
+                    &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
                     </span>
                     &nbsp;
                     <span title="Show/hide the legend">
@@ -1022,6 +1034,10 @@
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                     </span>
                     &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                    </span>
+                    &nbsp;
                     <span title="Show/hide the legend">
                       <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                     </span>
@@ -1140,6 +1156,10 @@
                     &nbsp;
                     <span title="Show/hide the title">
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
+                    </span>
+                    &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
                     </span>
                     &nbsp;
                     <span title="Show/hide the legend">
@@ -1261,6 +1281,10 @@
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                     </span>
                     &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                    </span>
+                    &nbsp;
                     <span title="Show/hide the legend">
                       <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                     </span>
@@ -1378,6 +1402,10 @@
                     &nbsp;
                     <span title="Show/hide the title">
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
+                    </span>
+                    &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
                     </span>
                     &nbsp;
                     <span title="Show/hide the legend">
@@ -1499,6 +1527,10 @@
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                     </span>
                     &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                    </span>
+                    &nbsp;
                     <span title="Show/hide the legend">
                       <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                     </span>
@@ -1618,6 +1650,10 @@
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
                     </span>
                     &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
+                    </span>
+                    &nbsp;
                     <span title="Show/hide the legend">
                       <label class="label_toggle_legend"><input class="button_toggle_legend" type="checkbox" onclick='adh_svg.show_legend(!adh_svg.is_visible_legend())'>legend</label>
                     </span>
@@ -1735,6 +1771,10 @@
                     &nbsp;
                     <span title="Show/hide the title">
                       <label class="label_toggle_title"><input class="button_toggle_title" type="checkbox" onclick='adh_svg.show_title(!adh_svg.is_visible_title())'>title</label>
+                    </span>
+                    &nbsp;
+                    <span title="Show/hide event intervals">
+                      <label class="label_toggle_event_intervals"><input class="button_toggle_event_intervals" type="checkbox" onclick='adh_svg.show_event_intervals(!adh_svg.is_visible_event_intervals())'>event intervals</label>
                     </span>
                     &nbsp;
                     <span title="Show/hide the legend">
