--- a/inst/html-templates/html-template.html
+++ b/inst/html-templates/html-template.html
@@ -40,7 +40,7 @@
 
   </head>
 
-  <body>
+  <body class="active">
     <div id="tooltip" display="none" style="position: absolute; display: none; z-index: 2;"></div>
     <div class="wrapper">
         <div class="sidebar">
