Aesthetic changes to html output
Align colours with modern version of STUMedView

--- a/inst/html-templates/html-template.html
+++ b/inst/html-templates/html-template.html
@@ -133,7 +133,7 @@
         <div class="section">
             <div class="top_bar">
                 <div class="menu_toggle">
-                    <a href="#"><i class="fas fa-bars"></i></a>
+                    <a href="#"></a> <!--<a href="#"><i class="fas fa-bars"></i></a>-->
                 </div>  
             </div>
             <div class="tabcontent-main">
